cmake_minimum_required(VERSION 3.15)

project(PluginSaturador1 VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# -----------------------------------------------------------------------------
# MSVC runtime
# -----------------------------------------------------------------------------
# Nota: en plugins (VST3) normalmente se recomienda /MD (runtime dinámico)
# para evitar problemas de CRT al cargar en hosts. Si mantienes /MT, y ves
# inestabilidad/crashes raros, este es un sospechoso #1.
if (MSVC)
  # Release: /MT  | Debug: /MTd
  set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
endif()

include(FetchContent)

# -----------------------------
# Fetch JUCE
# -----------------------------
FetchContent_Declare(
  juce
  GIT_REPOSITORY https://github.com/juce-framework/JUCE.git
  GIT_TAG 8.0.10
)
FetchContent_MakeAvailable(juce)

# -----------------------------
# Plugin Target (VST3)
# -----------------------------
juce_add_plugin(PluginSaturador1
  COMPANY_NAME "golk"
  PRODUCT_NAME "Plugin Saturador 1"

  # IDs únicos para evitar colisión/caché en hosts (VST3 ClassID)
  PLUGIN_MANUFACTURER_CODE G1K1
  PLUGIN_CODE S7A1

  FORMATS VST3

  VST3_CATEGORIES "Fx" "Distortion"

  IS_SYNTH FALSE
  IS_MIDI_EFFECT FALSE
  NEEDS_MIDI_INPUT FALSE
  NEEDS_MIDI_OUTPUT FALSE

  COPY_PLUGIN_AFTER_BUILD FALSE

  # Deja que JUCE genere manifest/moduleinfo.json
  VST3_AUTO_MANIFEST TRUE
)

juce_generate_juce_header(PluginSaturador1)

# -----------------------------------------------------------------------------
# Presets auto-detectados: preset-*.h
# Genera un PresetRegistry.h (PRO/stateful) en el directorio de build
# y lo pone primero en includes.
# -----------------------------------------------------------------------------
file(GLOB CONFIGURE_DEPENDS PRESET_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/preset-*.h")
list(LENGTH PRESET_HEADERS PRESET_COUNT)

set(GENERATED_PRESET_REGISTRY "${CMAKE_CURRENT_BINARY_DIR}/PresetRegistry.h")

file(WRITE "${GENERATED_PRESET_REGISTRY}" "#pragma once\n\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "// PresetRegistry.h (AUTO-GENERATED by CMake) - PRO/stateful\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "// Escanea preset-*.h y expone una lista de presets con estado.\n\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "#include <array>\n#include <cstddef>\n#include <type_traits>\n\n")

# Includes de cada preset
foreach(hdr IN LISTS PRESET_HEADERS)
  get_filename_component(hdr_name "${hdr}" NAME)
  file(APPEND "${GENERATED_PRESET_REGISTRY}" "#include \"${hdr_name}\"\n")
endforeach()

file(APPEND "${GENERATED_PRESET_REGISTRY}" "\nstruct PresetRegistry\n{\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "    struct Item\n    {\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "        const char* displayName = nullptr;\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "        std::size_t stateSize  = 1;\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "        std::size_t stateAlign = alignof(std::max_align_t);\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "        void  (*prepare)(void* state, float sr) = nullptr;\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "        void  (*reset)  (void* state) = nullptr;\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "        float (*process)(void* state, float x) = nullptr;\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "    };\n\n")

file(APPEND "${GENERATED_PRESET_REGISTRY}" "    template <typename Preset>\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "    static constexpr Item make() noexcept\n    {\n")

# 1.2 Blindaje: State trivial (evita UB si alguien mete un State no-trivial)
file(APPEND "${GENERATED_PRESET_REGISTRY}" "        static_assert(std::is_trivially_default_constructible_v<typename Preset::State>,\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "                      \"Preset::State must be trivially default constructible\");\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "        static_assert(std::is_trivially_destructible_v<typename Preset::State>,\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "                      \"Preset::State must be trivially destructible\");\n")

file(APPEND "${GENERATED_PRESET_REGISTRY}" "        return Item {\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "            Preset::kDisplayName,\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "            sizeof(typename Preset::State),\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "            alignof(typename Preset::State),\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "            +[](void* st, float sr)\n            {\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "                auto& s = *reinterpret_cast<typename Preset::State*>(st);\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "                Preset::prepare (s, sr);\n            },\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "            +[](void* st)\n            {\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "                auto& s = *reinterpret_cast<typename Preset::State*>(st);\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "                Preset::reset (s);\n            },\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "            +[](void* st, float x) -> float\n            {\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "                auto& s = *reinterpret_cast<typename Preset::State*>(st);\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "                return Preset::process (s, x);\n            }\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "        };\n    }\n\n")

if(PRESET_COUNT EQUAL 0)
  file(APPEND "${GENERATED_PRESET_REGISTRY}" "    static constexpr std::array<Item, 0> items {{ }};\n\n")
else()
  file(APPEND "${GENERATED_PRESET_REGISTRY}" "    static constexpr std::array<Item, ${PRESET_COUNT}> items {{\n")
  foreach(hdr IN LISTS PRESET_HEADERS)
    get_filename_component(stem "${hdr}" NAME_WE)  # preset-Neve1073
    string(REPLACE "preset-" "" preset_id "${stem}")
    string(REGEX REPLACE "[^A-Za-z0-9_]" "_" preset_id "${preset_id}")
    set(struct_name "Preset_${preset_id}")
    file(APPEND "${GENERATED_PRESET_REGISTRY}" "        make<${struct_name}>(),\n")
  endforeach()
  file(APPEND "${GENERATED_PRESET_REGISTRY}" "    }};\n\n")
endif()

file(APPEND "${GENERATED_PRESET_REGISTRY}" "    static constexpr std::size_t computeMaxStateSize() noexcept\n    {\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "        std::size_t m = 1;\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "        for (const auto& it : items) m = (it.stateSize > m) ? it.stateSize : m;\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "        return m;\n    }\n\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "    static constexpr std::size_t computeMaxStateAlign() noexcept\n    {\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "        std::size_t m = alignof(std::max_align_t);\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "        for (const auto& it : items) m = (it.stateAlign > m) ? it.stateAlign : m;\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "        return m;\n    }\n\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "    static constexpr std::size_t kMaxStateSize  = computeMaxStateSize();\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "    static constexpr std::size_t kMaxStateAlign = computeMaxStateAlign();\n")
file(APPEND "${GENERATED_PRESET_REGISTRY}" "};\n")

# 1.1 Agregar el header autogenerado al target (mejor IDE + dependencias)
set_source_files_properties("${GENERATED_PRESET_REGISTRY}" PROPERTIES GENERATED TRUE)
target_sources(PluginSaturador1 PRIVATE "${GENERATED_PRESET_REGISTRY}")

# Para IDEs: añade los headers de presets al target
if(PRESET_HEADERS)
  target_sources(PluginSaturador1 PRIVATE ${PRESET_HEADERS})
endif()

# Asegura prioridad del PresetRegistry auto-generado
target_include_directories(PluginSaturador1 PRIVATE
  "${CMAKE_CURRENT_BINARY_DIR}"
  "${CMAKE_CURRENT_SOURCE_DIR}"
)

target_sources(PluginSaturador1 PRIVATE
  PluginProcessor.cpp
  PluginProcessor.h
  funciones.h
  # OJO: PresetRegistry.h del SOURCE ya no es necesario si lo autogeneras.
  # Lo puedes dejar, pero puede confundir en IDE. Recomiendo quitarlo:
  # PresetRegistry.h
)

target_compile_definitions(PluginSaturador1 PRIVATE
  JUCE_WEB_BROWSER=0
  JUCE_USE_CURL=0
  JUCE_VST3_CAN_REPLACE_VST2=0
)

target_link_libraries(PluginSaturador1 PRIVATE
  juce::juce_audio_processors
  juce::juce_dsp
  juce::juce_gui_basics
  juce::juce_gui_extra

  juce::juce_recommended_config_flags
  juce::juce_recommended_warning_flags
  juce::juce_recommended_lto_flags
)

